# bignums

./: .gitignore  .gk_history  AUTHORS  Makefile.am  bignum.c  bignum.h  configure.ac  main.c
src/: Makefile.am  addorsub.h  alg.c  alg.l  bignum.h  integer.h  main.c  memory.c  memory.h  nadd.c  natural.h  ndiv.c  nmul.c  nshift.c  nsub.c  parser.y  test.h  zadd.c  zasgn.c  zdiv.c  zinit.c  zio.c  zlogic.c  zmul.c  zpower.c  zshift.c  zsub.c
src/arm/: ndiv.c  test.s
src/generic/: Makefile  dig_div.c  dig_mul.c  dig_mulandadd.c  nadd.c  nadd2.c  ncmp.c  ndiv.c  ndiv2.c  nlogic.c  nlshift.c  nlz.c  nmul.c  nmul2.c  nrshift.c  nshift.c  nsub.c  nsub2.c  test.c
src/x86_64/: Makefile  dig_mulandadd.c  nadd.s  nadd2.s  ncmp.s  ndiv.c  ndiv2.c  nlz.c  nmul.c  nmul.s  nmul2.c  nmul2.s  nsub.s  nsub2.s  test.s
